--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -13,7 +13,7 @@
 						</ul>
 					</nav>
 					<div class="copyright ml-auto">
-                        &copy; <a target="_blank" href="https://github.com/amruthakrishnap"> Team Pandava's</a> 
+                        &copy; <a target="_blank" href="https://github.com/Teampandavas/sharechat_creator_studio"> Team Pandava's</a> 
                        
 					</div>				
 				</div>
