--- a/apps/templates/home/NewPost.html
+++ b/apps/templates/home/NewPost.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
 
-                <form method="post" action="#">
+                <form method="post" action="" enctype="multipart/form-data">
                     {% csrf_token %}
 
                     <div class="card-body">
@@ -51,22 +51,23 @@
                                 <div class="form-group">
                                     <div class="form-group has-success">
 										<label for="successInput"><b>Enter Title</b></label>
-										<input type="text" id="Title" value="" class="form-control form-control-lg">
+										<!-- <input type="text" id="Title" value="" class="form-control form-control-lg"> -->
+                                        {{ form.Title }}
 									</div>
                                 </div>
 
                                 <div class="form-group">
                                     <div class="form-group">
 										<label for="comment">Describe About Your Post</label>
-										<textarea class="form-control text-primary" id="Desc" rows="5">
-
+										<!-- <textarea class="form-control text-primary" id="Desc" rows="5"> -->
+                                        {{ form.Desc }}
 										</textarea>
 									</div>
                                 </div>
                                 
                                 <div class="form-group">
                                     <label for="exampleFormControlFile1">Upload Video </label>
-                                    <input type="file" accept="video/mp4,video/x-m4v,video/*" class="form-control-file" id="exampleFormControlFile1">
+                                    <input name="vd" type="file" accept="video/mp4*" class="form-control-file" id="exampleFormControlFile1">
                                 </div>
                                 
 
@@ -75,31 +76,31 @@
                                         <div class="selectgroup selectgroup-pills">
                                             <label class="selectgroup-item">
                                                 <input type="checkbox" name="value" value="HTML" class="selectgroup-input" checked="">
-                                                <span class="selectgroup-button">HTML</span>
+                                                <span class="selectgroup-button"># Trending</span>
                                             </label>
                                             <label class="selectgroup-item">
                                                 <input type="checkbox" name="value" value="CSS" class="selectgroup-input">
-                                                <span class="selectgroup-button">CSS</span>
+                                                <span class="selectgroup-button"># Nature</span>
                                             </label>
                                             <label class="selectgroup-item">
                                                 <input type="checkbox" name="value" value="PHP" class="selectgroup-input">
-                                                <span class="selectgroup-button">PHP</span>
+                                                <span class="selectgroup-button"># Photography</span>
                                             </label>
                                             <label class="selectgroup-item">
                                                 <input type="checkbox" name="value" value="JavaScript" class="selectgroup-input">
-                                                <span class="selectgroup-button">JavaScript</span>
+                                                <span class="selectgroup-button"># Gaming</span>
                                             </label>
                                             <label class="selectgroup-item">
                                                 <input type="checkbox" name="value" value="Ruby" class="selectgroup-input">
-                                                <span class="selectgroup-button">Ruby</span>
+                                                <span class="selectgroup-button"># Gossip</span>
                                             </label>
                                             <label class="selectgroup-item">
                                                 <input type="checkbox" name="value" value="Ruby" class="selectgroup-input">
-                                                <span class="selectgroup-button">Ruby</span>
+                                                <span class="selectgroup-button"># ShareChat Studio</span>
                                             </label>
                                             <label class="selectgroup-item">
                                                 <input type="checkbox" name="value" value="C++" class="selectgroup-input">
-                                                <span class="selectgroup-button">C++</span>
+                                                <span class="selectgroup-button"># Hackathon Live</span>
                                             </label>
                                         </div>
                                     </div>
