Beta Pre Release

--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -47,9 +47,9 @@
 							<div class="collapse" id="dashboard">
 								<ul class="nav nav-collapse">
 									<li>
-										<a href="sharechat.html">
+										<a href="/">
 											<span class="sub-item">Sharechat</span>
-											<a href="moj.html">
+											<a href="/MojStudio">
 												<span class="sub-item">Moj</span>
 										</a>
 									</li>
